# example_python_package

./: pyproject.toml
example_python_package/: main_invocation_timestamp.txt  run.py
