[project]
name = "example-python-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["example_python_package*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"